--- a/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.html
+++ b/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.html
@@ -10,7 +10,7 @@
   <div class="quantity-wrapper">
     <button type="button" class="decrease-quantity"
       mat-button mat-icon-button
-      aria-label="Quitar unidad"
+      aria-label="Remove one"
       i18n-aria-label="remove product unit|Label for action button to take one (1) unit of a product away from the shopping cart"
       [disabled]="notInCart"
       (click)="onClickDecrease()">
@@ -18,7 +18,7 @@
     </button>
     <span class="quantity">{{ units }}</span>
     <button type="button" class="increase-quantity"
-      aria-label="Agregar unidad"
+      aria-label="Add one"
       i18n-aria-label="add product unit|Label for action button to include one (1) more unit of a product in the shopping cart"
       mat-button mat-icon-button
       (click)="onClickIncrease()">
