--- a/src/app/shared/components/company-form/company-form.component.html
+++ b/src/app/shared/components/company-form/company-form.component.html
@@ -8,13 +8,13 @@
 <form [formGroup]="formGroup">
   <mat-form-field class="idNumber">
     <input matInput formControlName="idNumber"
-      placeholder="Rut de empresa"
+      placeholder="Company ID number"
       i18n-placeholder="Name of field for company identification number"
       (blur)="onTouched()" />
   </mat-form-field>
   <mat-form-field class="name">
     <input matInput formControlName="name"
-      placeholder="Razón social"
+      placeholder="Company legal name"
       i18n-placeholder="Name of field for official, complete company name"
       (blur)="onTouched()" />
   </mat-form-field>
