--- a/src/app/store/components/header/login-button/store-header-login-button.component.html
+++ b/src/app/store/components/header/login-button/store-header-login-button.component.html
@@ -6,7 +6,7 @@
 -->
 
 <button mat-button type="button"
-  aria-label="Iniciar sesión"
+  aria-label="Log in"
   i18n-aria-label="log in|Label for action button to prompt a login"
   (click)="onClickLogIn()">
   <mat-icon>person_outline</mat-icon>
