--- a/src/app/store/components/header/navigation/store-header-navigation.component.html
+++ b/src/app/store/components/header/navigation/store-header-navigation.component.html
@@ -6,13 +6,13 @@
 -->
 
 <a mat-button routerLink="/store"
-  aria-label="Ir al Catálogo de Productos"
+  aria-label="Go to storefront"
   i18n-aria-label="Label for link to navigate to storefront">
   <mat-icon>storefront</mat-icon>
 </a>
 <ng-container *ngIf="cartHasItems$ | async">
   <a mat-button [routerLink]="['/store', 'cart']"
-    aria-label="Ir al Carrito"
+    aria-label="Go to cart review"
     i18n-aria-label="Label for link to navigate to cart">
     <mat-icon>shopping_cart</mat-icon>
     <span class="cart-summary">
