--- a/src/app/store/components/shipping-form/store-shipping-form.component.html
+++ b/src/app/store/components/shipping-form/store-shipping-form.component.html
@@ -7,17 +7,17 @@
 
 <form [formGroup]="formGroup">
   <mat-radio-group formControlName="requestShipping"
-    aria-label="Elige una opción para entrega"
+    aria-label="Choose a delivery option"
     i18n-aria-label="Label to hint user that they must choose a delivery option">
     <mat-radio-button [value]="true" (blur)="onTouched()">
-      <span i18n="shipping delivery|Label for option to choose delivery to a shipping address">Despacho a Domicilio</span>
+      <span i18n="shipping delivery|Label for option to choose delivery to a shipping address">Deliver to address</span>
     </mat-radio-button>
     <mat-radio-button [value]="false" (blur)="onTouched()" >
-      <span i18n="in-store delivery|Label for option to choose pick-up in store">Retiro en Tienda</span>
+      <span i18n="in-store delivery|Label for option to choose pick-up in store">Pickup in store</span>
     </mat-radio-button>
   </mat-radio-group>
   <app-addresses-editor-form #addressForm formControlName="shippingAddress"
-    placeholder="Dirección de despacho"
+    placeholder="Shipping address"
     i18n-placeholder="shipping address field|Name of field for address to deliver items to">
   </app-addresses-editor-form>
 </form>
