--- a/src/app/store/routes/cart-review/store-cart-review.component.html
+++ b/src/app/store/routes/cart-review/store-cart-review.component.html
@@ -6,7 +6,7 @@
 -->
 
 <div class="cart">
-  <h3 i18n="transaction details title|Title of widget displaying contents of cart">Detalles de la compra</h3>
+  <h3 i18n="cart review title|Title of widget displaying contents of cart">Cart review</h3>
   <app-store-cart-contents-table>
   </app-store-cart-contents-table>
   <mat-divider></mat-divider>
@@ -19,13 +19,13 @@
   <mat-step #inputStep
     [stepControl]="checkoutRequest.formGroup"
     [editable]="inputEditable">
-    <ng-template matStepLabel i18n="Title of form step to input checkout details">Datos para el pedido</ng-template>
+    <ng-template matStepLabel i18n="Title of form step to input checkout details">Required information</ng-template>
     <app-store-checkout-request-form #checkoutRequest
       (request)="stepper.next()">
     </app-store-checkout-request-form>
   </mat-step>
   <mat-step #confirmationStep>
-    <ng-template matStepLabel i18n="Title of form step to confirm checkout details">Confirmación</ng-template>
+    <ng-template matStepLabel i18n="Title of form step to confirm checkout details">Confirmation</ng-template>
     <app-store-checkout-confirmation
       (confirmed)="onConfirmation()">
     </app-store-checkout-confirmation>
