--- a/src/app/shared/components/person-form/person-form.component.html
+++ b/src/app/shared/components/person-form/person-form.component.html
@@ -9,37 +9,37 @@
 
   <mat-form-field class="firstName">
     <input matInput formControlName="firstName"
-      placeholder="Nombres"
+      placeholder="First name"
       i18n-placeholder="Name of field for the complete first name of a person" />
   </mat-form-field>
 
   <mat-form-field class="lastName">
     <input matInput formControlName="lastName"
-      placeholder="Apellidos"
+      placeholder="Last name"
       i18n-placeholder="Name of field for the complete last name of a person" />
   </mat-form-field>
 
   <mat-form-field class="idNumber">
     <input matInput formControlName="idNumber"
-      placeholder="Rut"
+      placeholder="ID number"
       i18n-placeholder="Name of field for the identification number of a person" />
   </mat-form-field>
 
   <mat-form-field class="email">
     <input matInput formControlName="email"
-      placeholder="Email"
+      placeholder="E-mail"
       i18n-placeholder="Name of field for the email address of a person" />
   </mat-form-field>
 
   <mat-form-field class="phone1">
     <input matInput formControlName="phone1"
-      placeholder="Teléfono 1"
+      placeholder="Phone 1"
       i18n-placeholder="Name of field for the main phone number of a person" />
   </mat-form-field>
 
   <mat-form-field class="phone2">
     <input matInput formControlName="phone2"
-      placeholder="Teléfono 2"
+      placeholder="Phone 2"
       i18n-placeholder="Name of field for the alternative phone number of a person" />
   </mat-form-field>
 </form>
