--- a/src/app/shared/dialogs/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/dialogs/confirmation-dialog/confirmation-dialog.component.html
@@ -11,7 +11,7 @@
   <button mat-button mat-raised-button
     type="button"
     [mat-dialog-close]="true"
-    i18n="yes|Label for action button to answer positively">Sí</button>
+    i18n="yes|Label for action button to answer positively">Yes</button>
   <button mat-button mat-raised-button
     type="button"
     [mat-dialog-close]="false"
