--- a/src/app/shared/dialogs/edit-profile-form-dialog/edit-profile-form-dialog.component.html
+++ b/src/app/shared/dialogs/edit-profile-form-dialog/edit-profile-form-dialog.component.html
@@ -16,10 +16,10 @@
   <div class="actions">
     <button mat-button mat-raised-button type="button"
       (click)="onSubmit()"
-      i18n="confirm|Label for action button to accept and proceed">Aceptar</button>
+      i18n="confirm|Label for action button to accept and proceed">Confirm</button>
     <button mat-button mat-raised-button type="button"
       [color]="cancelButtonColor$ | async"
       (click)="onCancel()"
-      i18n="cancel|Label for action button to cancel and/or stop an operation">Cancelar</button>
+      i18n="cancel|Label for action button to cancel and/or stop an operation">Cancel</button>
   </div>
 </form>
