--- a/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.html
+++ b/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.html
@@ -5,24 +5,24 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h3 mat-dialog-title i18n="Title of dialog prompt to indicate users that some sort of ID is required">Identificación requerida</h3>
-<p i18n="Label to hint user that they must log in, register or indicate some personal info to proceed">Para proceder a su carrito, debe iniciar sesión, registrarse, o ingresar sus datos de facturación.</p>
-<p i18n="Label to instruct user that they choose one option out of three">Por favor, elija una de las tres a continuación:</p>
+<h3 mat-dialog-title i18n="Title of dialog prompt to indicate users that some sort of ID is required">Identification is required</h3>
+<p i18n="Label to hint user that they must log in, register or indicate some personal info to proceed">To review your cart, you need to either log in to your account, register anew (it's free) or start a guest session by giving your billing details.</p>
+<p i18n="Label to instruct user that they choose one option out of three">Please, choose one of the following three:</p>
 <div class="actions">
   <button mat-button mat-raised-button type="button"
     (click)="onClickOption('login')">
-    <span i18n="log in|Label for action button to prompt login">Iniciar sesión</span>
+    <span i18n="log in|Label for action button to prompt login">Log in</span>
     <mat-icon>verified_user</mat-icon>
   </button>
   <button mat-button mat-raised-button type="button"
     (click)="onClickOption('register')">
-    <span i18n="Label for action button to prompt registration">Registrarme</span>
+    <span i18n="Label for action button to prompt registration">Register</span>
     <mat-icon>person_add</mat-icon>
   </button>
   <button mat-button mat-raised-button type="button"
     (click)="onClickOption('guest')">
-    <span i18n="Label for action button to prompt a guest, temporary login">Continuar sin cuenta</span>
+    <span i18n="Label for action button to prompt a guest, temporary login">Continue as guest</span>
     <mat-icon>remove_moderator</mat-icon>
   </button>
 </div>
-<p class="hint" i18n="Label to hint user that they can click away from current dialog to close it">Si desea cerrar este diálogo, haga clic fuera de él.</p>
+<p class="hint" i18n="Label to hint user that they can click away from current dialog to close it">You can close this window clicking away from it</p>
