fix some english localization in header menu

--- a/src/app/store/components/header/menu/store-header-menu.component.html
+++ b/src/app/store/components/header/menu/store-header-menu.component.html
@@ -18,13 +18,13 @@
     class="edit-profile"
     (click)="onClickEditProfile()">
     <mat-icon>edit</mat-icon>
-    <span i18n="Label for action button to prompt profile edit">Editar Perfil</span>
+    <span i18n="Label for action button to prompt profile edit">Edit Profile</span>
   </button>
   <button mat-menu-item type="button"
     class="logout"
     (click)="onClickLogout()">
     <mat-icon>exit_to_app</mat-icon>
-    <span i18n="Label for action button to log out">Terminar Sesión</span>
+    <span i18n="Label for action button to log out">Log Out</span>
   </button>
 </mat-menu>
 <button mat-button type="button"
