add i18n to login dialog title, fix translation

--- a/src/app/store/dialogs/login-form/store-login-form-dialog.component.html
+++ b/src/app/store/dialogs/login-form/store-login-form-dialog.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 mat-dialog-title>Ingresar</h2>
+<h2 mat-dialog-title i18n="Title of dialog prompt for logging in">Log In</h2>
 <app-centered-mat-spinner *ngIf="loggingIn$ | async">
 </app-centered-mat-spinner>
 
